Refactored database
- fixed varchar so they now have an actual limit and works in mssq.
- changed instance_id to a bigint identity run_id, so we don't use a
long varchar column as a primary key field, that all log lines refer to.
- added hostname to scheduled runs table, as we don't have that
information in the primary key anymore.

- also added a new test mode that can be used when we don't want to
start background threads, such as in unit tests.
- started work on test utilities.